fixed flatlist issue

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,4 +19,8 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # Version of flipper SDK to use with React Native
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=eshimc25
+MYAPP_UPLOAD_KEY_PASSWORD=eshimc25
 FLIPPER_VERSION=0.75.1
